force-app/main/default/objects/User/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Returns null if the date of birth is null. Otherwise, take the difference between today and the date of birth (+1) divided by the average number of days in a year.</description>
    <formula>IF(
    ISNULL(DateOfBirth__c),
    null,
    FLOOR(
        ( TODAY() - DateOfBirth__c +1 )
        /
        365.2425
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The age of this user derived from the Date Of Birth field</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>