force-app/main/default/objects/User/fields/BusinessUnitDescription__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitDescription__c</fullName>
    <label>Business Unit Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>