force-app/main/default/objects/User/fields/BusinessUnitID__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitID__c</fullName>
    <label>Business Unit ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>