force-app/main/default/objects/User/fields/CheckRoutingDescription__c.field-meta.xml
<CustomField>
    <fullName>CheckRoutingDescription__c</fullName>
    <label>Check Routing Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>