force-app/main/default/objects/User/fields/CheckRoutingID__c.field-meta.xml
<CustomField>
    <fullName>CheckRoutingID__c</fullName>
    <label>Check Routing ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>