force-app/main/default/objects/User/fields/CurrentRate__c.field-meta.xml
<CustomField>
    <fullName>CurrentRate__c</fullName>
    <label>Current Rate</label>
    <length>15</length>
    <type>Text</type>
</CustomField>