force-app/main/default/objects/User/fields/CurrentStep__c.field-meta.xml
<CustomField>
    <fullName>CurrentStep__c</fullName>
    <label>Current Step</label>
    <length>6</length>
    <type>Text</type>
</CustomField>