force-app/main/default/objects/User/fields/DatePayStarts__c.field-meta.xml
<CustomField>
    <fullName>DatePayStarts__c</fullName>
    <label>Current Position Date</label>
    <type>Date</type>
</CustomField>