force-app/main/default/objects/User/fields/Days_Since_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Hire_Date__c</fullName>
    <formula>Today() -   $User.OriginalHireDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Hire Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>