force-app/main/default/objects/User/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <label>Employee ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>