force-app/main/default/objects/User/fields/EmployeeID_Number__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID_Number__c</fullName>
    <description>Employee ID Number for numeric</description>
    <formula>VALUE(EmployeeID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmployeeID_Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>