force-app/main/default/objects/User/fields/EmployeeStatusDescription__c.field-meta.xml
<CustomField>
    <fullName>EmployeeStatusDescription__c</fullName>
    <label>Employee Status Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>