force-app/main/default/objects/User/fields/EmployeeStatusID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeStatusID__c</fullName>
    <label>Employee Status ID</label>
    <length>1</length>
    <type>Text</type>
</CustomField>