force-app/main/default/objects/User/fields/FacilityDescription__c.field-meta.xml
<CustomField>
    <fullName>FacilityDescription__c</fullName>
    <label>Facility Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>