force-app/main/default/objects/User/fields/FacilityID__c.field-meta.xml
<CustomField>
    <fullName>FacilityID__c</fullName>
    <label>Facility ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>