force-app/main/default/objects/User/fields/Full_Time_Part_Time_Description__c.field-meta.xml
<CustomField>
    <fullName>Full_Time_Part_Time_Description__c</fullName>
    <label>Full-Time/Part-Time Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>