force-app/main/default/objects/User/fields/Full_Time_Part_Time_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_Time_Part_Time_ID__c</fullName>
    <label>Full-Time/Part-Time ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>