force-app/main/default/objects/User/fields/Is_Union__c.field-meta.xml
<CustomField>
    <fullName>Is_Union__c</fullName>
    <formula>NOT( ISBLANK( UnionID__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Union</label>
    <type>Checkbox</type>
</CustomField>