force-app/main/default/objects/User/fields/Is_Users_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Is_Users_Supervisor__c</fullName>
    <formula>IF(  Supervisor__c  = $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User&#39;s Supervisor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>