force-app/main/default/objects/User/fields/JobCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>JobCodeDescription__c</fullName>
    <label>Job Code Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>