force-app/main/default/objects/User/fields/JobCodeID__c.field-meta.xml
<CustomField>
    <fullName>JobCodeID__c</fullName>
    <label>Job Code ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>