force-app/main/default/objects/User/fields/Last_Four_SSN__c.field-meta.xml
<CustomField>
    <fullName>Last_Four_SSN__c</fullName>
    <label>Last Four SSN</label>
    <length>4</length>
    <type>Text</type>
</CustomField>