force-app/main/default/objects/User/fields/LastUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>LastUpdatedDate__c</fullName>
    <label>Last Updated Date</label>
    <type>DateTime</type>
</CustomField>