force-app/main/default/objects/User/fields/LeaveOfAbsenceEndDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveOfAbsenceEndDate__c</fullName>
    <label>Leave Of Absence End Date</label>
    <type>Date</type>
</CustomField>