force-app/main/default/objects/User/fields/LeaveofAbsenceStartDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveofAbsenceStartDate__c</fullName>
    <label>Leave of Absence Start Date</label>
    <type>Date</type>
</CustomField>