force-app/main/default/objects/User/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <formula>Profile.UserLicense.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce License</label>
    <type>Text</type>
</CustomField>