force-app/main/default/objects/User/fields/Next_Non_Union_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Next_Non_Union_Supervisor__c</fullName>
    <formula>CASE(
    FirstNonUnionSupervisorStep__c,
    1, ManagerId,
    2, Manager.ManagerId,
    3, Manager.Manager.ManagerId,
    4, Manager.Manager.Manager.ManagerId,
    5, Manager.Manager.Manager.Manager.ManagerId,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Non-Union Supervisor</label>
    <type>Text</type>
</CustomField>