force-app/main/default/objects/User/fields/OriginalHireDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalHireDate__c</fullName>
    <label>Original Hire Date</label>
    <type>Date</type>
</CustomField>