force-app/main/default/objects/User/fields/PayGradeID__c.field-meta.xml
<CustomField>
    <fullName>PayGradeID__c</fullName>
    <label>Pay Grade ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>