force-app/main/default/objects/User/fields/PID__c.field-meta.xml
<CustomField>
    <fullName>PID__c</fullName>
    <label>PID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>