force-app/main/default/objects/User/fields/RaceCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>RaceCodeDescription__c</fullName>
    <label>Race Code Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>