force-app/main/default/objects/User/fields/RaceCodeID__c.field-meta.xml
<CustomField>
    <fullName>RaceCodeID__c</fullName>
    <label>Race Code ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>