force-app/main/default/objects/User/fields/superid__c.field-meta.xml
<CustomField>
    <fullName>superid__c</fullName>
    <formula>CASESAFEID(Supervisor__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>superid</label>
    <type>Text</type>
</CustomField>