force-app/main/default/objects/User/fields/Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Email__c</fullName>
    <formula>Supervisor__r.Email</formula>
    <label>Supervisor Email</label>
    <type>Text</type>
</CustomField>