force-app/main/default/objects/User/fields/Supervisor_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Full_Name__c</fullName>
    <formula>SupervisorFirstName__c &amp; &quot; &quot; &amp;  SupervisorLastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor Full Name</label>
    <type>Text</type>
</CustomField>