force-app/main/default/objects/User/fields/SupervisorEmployeeID__c.field-meta.xml
<CustomField>
    <fullName>SupervisorEmployeeID__c</fullName>
    <label>Supervisor Employee ID</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>