force-app/main/default/objects/User/fields/SupervisorFirstName__c.field-meta.xml
<CustomField>
    <fullName>SupervisorFirstName__c</fullName>
    <label>Supervisor First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>