force-app/main/default/objects/User/fields/SupervisorId__c.field-meta.xml
<CustomField>
    <fullName>SupervisorId__c</fullName>
    <label>Supervisor</label>
    <relationshipName>Subordinate</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>