force-app/main/default/objects/User/fields/TerminationCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>TerminationCodeDescription__c</fullName>
    <label>Termination Code Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>