force-app/main/default/objects/User/fields/TerminationCodeID__c.field-meta.xml
<CustomField>
    <fullName>TerminationCodeID__c</fullName>
    <label>Termination Code ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>