force-app/main/default/objects/User/fields/Union_Representative__c.field-meta.xml
<CustomField>
    <fullName>Union_Representative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Union Representative</label>
    <type>Checkbox</type>
</CustomField>