force-app/main/default/objects/User/fields/UnionDescription__c.field-meta.xml
<CustomField>
    <fullName>UnionDescription__c</fullName>
    <label>Union Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>