force-app/main/default/objects/User/fields/UnionID__c.field-meta.xml
<CustomField>
    <fullName>UnionID__c</fullName>
    <label>Union ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>