force-app/main/default/objects/User/fields/YearsOfService__c.field-meta.xml
<CustomField>
    <fullName>YearsOfService__c</fullName>
    <formula>IF(
    TerminationDate__c != null,
    YEAR(TerminationDate__c),
    YEAR(DATEVALUE(NOW()))
)
-
YEAR(OriginalHireDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years Of Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>